test: add some basic content assertions